fix(form-item): ligatures on hints dont get cut off

--- a/packages/core/src/components/form-item/_form-item.scss
+++ b/packages/core/src/components/form-item/_form-item.scss
@@ -8,10 +8,10 @@
       display: block;
       color: $ray-color-text-medium;
       font-weight: 400;
-      font-size: $ray-field-label-size-focus;
+      font-size: 0.75rem;
       margin-top: 0.25rem;
       margin-left: $ray-field-h-spacing;
-      line-height: 1;
+      line-height: 1.25rem;
       width: 100%;
       text-overflow: ellipsis;
       overflow: hidden;
